Update The Annotated GAT (PPI).ipynb

--- a/The Annotated GAT (PPI).ipynb
+++ b/The Annotated GAT (PPI).ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# The Annotated GAT (PPI)\n",
     "\n",
-    "This notebook is the 2nd part of the series, please check out **\"The Annotated GAT (Cora)\"** notebook for a more gentle introduction to GAT. ❤️\n",
+    "This notebook is the 2nd part of the series; please check out **\"The Annotated GAT (Cora)\"** notebook for a more gentle introduction to GAT. ❤️\n",
     "\n",
     "The idea of this notebook is to explain how you can use GAT in an **inductive setting**. \n",
     "\n",
